--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
+<div id="help">
+    To move use WSAD - to go back in time use U.
+    <br />
+    Pressing U to go back in time, become creative and survive longer using time remnants misleading the enemies.
+</div>
+<div id="tickCounter"></div>
 <canvas id="app"></canvas>
-<script src="src/index.ts"></script>
+<script src="src/index.js"></script>
